tests/check/illegal_noval1.co
// RUN: not choreo %s 2>&1| FileCheck %s

__co__ void foo(global f32 [??, 16, M] a) {
  b = a.span(0);
  c : a.span [ (0), 7];
  d = {a.span};
  parallel p by 1 {
    dma.copy a.chunkat(p,_,_) => local;
    dma.copy a.chunkat(_,p,_) => local;
    dma.copy a.subspan(1, 8, 7).at(0,p,0) => local;
    foreach i in b;
  }
  // TODO: fix normalize
  // parallel r by c;
  parallel pp by b;
  parallel {q} by [d(0)] {
    inthreads(q > d(0)) {
      mutable aa = b;
    }
  }
  if (c(0) > 1);
}

// CHECK: note: `b's value can not be evaluated.
// CHECK: note: mdspan contains unspecific value.
// CHECK: note: `d's value can not be evaluated.
// CHECK: error: The destination block shape can not be evaluated.
// CHECK: error: The destination block shape can not be evaluated.
// CHECK: error: The upper bound(s) of 'i' can not be evaluated.
// CHECK: error: The parallel count can not be evaluated.
// CHECK: error: The parallel count can not be evaluated.
// CHECK: error: The inthreads-condition can not be evaluated.
// CHECK: note: `aa's value can not be evaluated.
// CHECK: error: The if-condition can not be evaluated.
